--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -74,14 +74,42 @@ body {
   }
 
 
-  @media (max-width: 768px) {
+  @media (max-width: 480px) {
+    /* Gaya untuk perangkat seluler dengan lebar maksimum 480px */
+    body {
+      font-size: 14px;
+    }
+  
+    .login-logo {
+      width: 100px;
+      margin-right: 10px;
+    }
+  
     .container {
       flex-direction: column;
-      align-items: stretch;
+      align-items: center;
+      justify-content: center;
+      height: auto;
+      padding: 20px;
     }
-
+  
     .login-form {
-      margin: 0;
-      margin-bottom: 20px;
+      max-width: 300px;
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
+  
+    .login-title {
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+  
+    .form-group input[type="text"],
+    .form-group input[type="password"] {
+      padding: 5px;
+    }
+  
+    .form-group button {
+      padding: 5px;
     }
   }
