--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -105,6 +105,7 @@ body {
     .form-group input[type="text"],
     .form-group input[type="password"] {
       padding: 5px;
+      align-content: center;
     }
   
     .form-group button {
